--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "axios": "^0.18.0",
     "axios-retry": "^3.1.1",
     "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-intl": "^2.7.2",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.2",
     "react-transition-group": "^2.5.0",
     "reactstrap": "^6.5.0"
   },
