--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": ".",
   "name": "enginemonitor.reactfront",
   "version": "0.1.0",
   "private": true,
@@ -19,7 +20,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-3006": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
