--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.15",
-    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "axios-retry": "^3.1.2",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
     "react-intl": "^2.8.0",
-    "react-scripts": "^2.1.5",
-    "react-transition-group": "^2.5.3",
-    "reactstrap": "^6.5.0"
+    "react-scripts": "^2.1.8",
+    "react-transition-group": "^2.7.1",
+    "reactstrap": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
