--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.12.2",
+    "@types/react": "^16.8.10",
+    "@types/react-dom": "^16.8.3",
     "axios": "^0.18.0",
     "axios-retry": "^3.1.2",
     "bootstrap": "^4.3.1",
@@ -17,7 +21,8 @@
     "react-intl": "^2.8.0",
     "react-scripts": "^2.1.8",
     "react-transition-group": "^2.7.1",
-    "reactstrap": "^7.1.0"
+    "reactstrap": "^7.1.0",
+    "typescript": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +39,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/react-intl": "^2.3.17"
+  }
 }
