--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/classnames": "^2.2.7",
     "@types/react-intl": "^2.3.17",
     "@types/react-transition-group": "^2.0.16",
     "@types/reactstrap": "^7.1.3"
