--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "axios-retry": "^3.1.2",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "jest-enzyme": "^7.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-intl": "^2.8.0",
     "react-scripts": "^2.1.8",
+    "react-test-renderer": "^16.8.6",
     "react-transition-group": "^2.7.1",
     "reactstrap": "^7.1.0",
     "typescript": "^3.4.1"
