--- a/package.json
+++ b/package.json
@@ -7,26 +7,17 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@types/jest": "^24.0.11",
-    "@types/node": "^11.12.2",
-    "@types/react": "^16.8.10",
-    "@types/react-dom": "^16.8.3",
     "axios": "^0.18.0",
     "axios-retry": "^3.1.2",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
-    "jest-enzyme": "^7.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-intl": "^2.8.0",
     "react-scripts": "^2.1.8",
-    "react-test-renderer": "^16.8.6",
     "react-transition-group": "^2.7.1",
-    "reactstrap": "^7.1.0",
-    "typescript": "^3.4.1"
+    "reactstrap": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,8 +36,17 @@
   ],
   "devDependencies": {
     "@types/classnames": "^2.2.7",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.13.0",
+    "@types/react": "^16.8.10",
+    "@types/react-dom": "^16.8.3",
     "@types/react-intl": "^2.3.17",
     "@types/react-transition-group": "^2.0.16",
-    "@types/reactstrap": "^7.1.3"
+    "@types/reactstrap": "^7.1.3",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "jest-enzyme": "^7.0.2",
+    "react-test-renderer": "^16.8.6",
+    "typescript": "^3.4.1"
   }
 }
