--- a/package.json
+++ b/package.json
@@ -17,13 +17,20 @@
     "react-intl": "^2.8.0",
     "react-scripts": "^2.1.8",
     "react-transition-group": "^2.7.1",
-    "reactstrap": "^7.1.0"
+    "reactstrap": "^7.1.0",
+    "ssh-deploy-release": "^2.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+
+    "deploy": "node scripts/deployRelease.js",
+    "rollback": "node scripts/rollBackRelease.js",
+
+    "prebuild": "react-scripts test --no-watch",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
