--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "sort": "sortjson src/**/*.json -s",
     "checkTranslation": "node scripts/checkAllMessages.js",
     "start": "react-scripts start",
+    "start-sw": "http-server ./build",
+    "just-build": "react-scripts build",
     "build": "react-scripts build",
     "test--no-watch": "react-scripts test --no-watch",
     "test": "react-scripts test",
+
     "deploy": "node scripts/deployRelease.js",
     "rollback": "node scripts/rollBackRelease.js",
 
@@ -58,6 +61,7 @@
     "@types/reactstrap": "^7.1.3",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
+    "http-server": "^0.11.1",
     "jest-enzyme": "^7.0.2",
     "react-test-renderer": "^16.8.6",
     "typescript": "^3.4.1"
