--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@types/localforage": "0.0.34",
     "axios": "^0.18.0",
     "axios-retry": "^3.1.2",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "localforage": "^1.7.3",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
@@ -32,10 +34,8 @@
     "build": "react-scripts build",
     "test--no-watch": "react-scripts test --no-watch",
     "test": "react-scripts test",
-
     "deploy": "node scripts/deployRelease.js",
     "rollback": "node scripts/rollBackRelease.js",
-
     "precheckTranslation": "npm run sort",
     "pretest--no-watch": "npm run checkTranslation",
     "prebuild": "npm run test--no-watch",
