--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,24 @@
   "name": "Equipment Maintenance Reminder",
   "icons": [
     {
-      "src": "engine.ico",
-      "sizes": "144x144 64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "/images/engine512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/engine192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/engine96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/engine48.png",
+      "sizes": "48x48",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
