--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@types/localforage": "0.0.34",
+    "@types/uuid": "^3.4.4",
     "axios": "^0.18.0",
     "axios-retry": "^3.1.2",
     "bootstrap": "^4.3.1",
@@ -23,7 +24,8 @@
     "react-transition-group": "^2.7.1",
     "react-uid": "^2.2.0",
     "reactstrap": "^7.1.0",
-    "ssh-deploy-release": "^2.3.4"
+    "ssh-deploy-release": "^2.3.4",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "sort": "sortjson src/**/*.json -s",
