--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios-retry": "^3.1.2",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "json-sort-cli": "^1.13.10",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
@@ -32,7 +33,7 @@
     "test": "react-scripts test",
     "deploy": "node scripts/deployRelease.js",
     "rollback": "node scripts/rollBackRelease.js",
-
+    
     "precheckTranslation": "npm run sort",
     "pretest--no-watch": "npm run checkTranslation",
     "prebuild": "npm run test--no-watch",
