--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": ".",
   "name": "enginemonitor.reactfront",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
@@ -32,16 +32,19 @@
     "sort": "sortjson src/**/*.json -s",
     "checkTranslation": "node scripts/checkAllMessages.js",
     "start": "react-scripts start",
-    "start-sw": "http-server ./build",
+    "start-sw": "http-server -c-1 ./build",
     "just-build": "react-scripts build",
     "build": "react-scripts build",
     "test--no-watch": "react-scripts test --no-watch",
     "test": "react-scripts test",
     "deploy": "node scripts/deployRelease.js",
     "rollback": "node scripts/rollBackRelease.js",
+    "generate-build-version": "node scripts/generateBuildVersion.js",
+
     "precheckTranslation": "npm run sort",
     "pretest--no-watch": "npm run checkTranslation",
-    "prebuild": "npm run test--no-watch",
+    "prejust-build": "npm-run-all generate-build-version",
+    "prebuild": "npm-run-all test--no-watch generate-build-version",
     "predeploy": "npm run build"
   },
   "eslintConfig": {
@@ -66,6 +69,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "http-server": "^0.11.1",
     "jest-enzyme": "^7.0.2",
+    "npm-run-all": "^4.1.5",
     "react-test-renderer": "^16.8.6",
     "typescript": "^3.5.2"
   }
