--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "axios-retry": "^3.1.2",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "json-sort-cli": "^1.13.10",
     "localforage": "^1.7.3",
     "node-sass": "^4.12.0",
-    "json-sort-cli": "^1.13.10",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-intl": "^2.9.0",
     "react-scripts": "^2.1.8",
+    "react-switch": "^5.0.1",
     "react-table-factory": "^0.1.31",
     "react-transition-group": "^2.9.0",
     "react-uid": "^2.2.0",
