--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-image-file-resizer": "^0.2.0",
     "react-intl": "^2.9.0",
     "react-scripts": "^2.1.8",
     "react-switch": "^5.0.1",
