--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios-retry": "^3.1.2",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "exif-parser": "^0.1.12",
     "json-sort-cli": "^1.13.10",
     "localforage": "^1.7.3",
     "node-sass": "^4.12.0",
