--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-intl": "^3.3.2",
     "react-scripts": "^3.2.0",
     "react-switch": "^5.0.1",
-    "react-table-factory": "^0.1.31",
+    "react-table-factory": "^0.2.7",
     "react-transition-group": "^4.3.0",
     "react-uid": "^2.2.0",
     "reactstrap": "^8.1.1",
@@ -70,12 +70,14 @@
     "@types/react-intl": "^3.0.0",
     "@types/react-transition-group": "^4.2.3",
     "@types/reactstrap": "^8.0.5",
+    "chalk": "^2.4.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "http-server": "^0.11.1",
     "jest-enzyme": "^7.1.1",
     "npm-run-all": "^4.1.5",
     "react-test-renderer": "^16.10.2",
+    "recursive-readdir": "^2.2.2",
     "typescript": "^3.6.4"
   }
 }
