Fix some npm script

--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "start-sw": "http-server -c-1 ./build",
     "just-build": "react-scripts build",
     "build": "react-scripts build",
-    "test--no-watch": "react-scripts test --no-watch",
+    "test--no-watch": "react-scripts test --watchAll=false",
     "test": "react-scripts test",
-    "coverage": "react-scripts test --coverage",
+    "coverage": "react-scripts test --coverage --watchAll=false",
     "deploy": "node scripts/deployRelease.js",
     "rollback": "node scripts/rollBackRelease.js",
     "generate-build-version": "node scripts/generateBuildVersion.js",
