--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": ".",
   "name": "enginemonitor.reactfront",
-  "version": "2.9.7",
+  "version": "2.9.8",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
@@ -19,8 +19,10 @@
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
+    "react-async": "^9.0.0",
     "react-dom": "^16.11.0",
     "react-html5-camera-photo": "^1.5.2",
+    "react-image": "^2.2.1",
     "react-image-file-resizer": "^0.2.1",
     "react-image-lightbox": "^5.1.0",
     "react-intl": "^3.4.0",
