--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "@types/react-intl": "^3.0.0",
     "@types/react-transition-group": "^4.2.3",
     "@types/reactstrap": "^8.0.6",
+    "chai": "^4.2.0",
+    "chai-datetime": "^1.5.0",
     "chalk": "^2.4.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
