--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "titleBar.inactiveBackground": "#12dbf1cc",
         "titleBar.activeForeground": "#030F40",
         "titleBar.inactiveForeground": "#030F40cc"
-    }
+    },
+    "eslint.enable": true
     
 }
