--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "exif-parser": "^0.1.12",
     "json-sort-cli": "^1.14.5",
     "localforage": "^1.7.3",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
@@ -71,11 +72,19 @@
     "@types/react-intl": "^3.0.0",
     "@types/react-transition-group": "^4.2.3",
     "@types/reactstrap": "^8.0.6",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
     "chai": "^4.2.0",
     "chai-datetime": "^1.5.0",
     "chalk": "^2.4.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "http-server": "^0.11.1",
     "jest-enzyme": "^7.1.1",
     "npm-run-all": "^4.1.5",
