--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,14 +26,26 @@
         "react/jsx-filename-extension": "off",
         "no-underscore-dangle": "off",
         "react/jsx-props-no-spreadin": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "no-plusplus": "off",
+        "react/jsx-props-no-spreading": "off"
     },
     "settings": {
         "import/resolver": {
-          "node": {
-            "extensions": [".js", ".jsx", ".ts", ".tsx"],
-            "paths": ["./src"]
+            "node": {
+                "extensions": [".js", ".jsx", ".ts", ".tsx"],
+                "paths": ["./src"]
+            }
+        }
+    },
+    "overrides": [
+        {
+          "files": [
+            "**/*.test.js"
+          ],
+          "env": {
+            "jest": true
           }
         }
-      }
+      ]
 }
