--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@types/localforage": "0.0.34",
-    "@types/uuid": "^3.4.5",
+    "@types/uuid": "^3.4.6",
     "axios": "^0.19.0",
     "axios-retry": "^3.1.2",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "exif-parser": "^0.1.12",
-    "json-sort-cli": "^1.14.5",
+    "json-sort-cli": "^1.14.7",
     "localforage": "^1.7.3",
+    "loglevel": "^1.6.6",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
@@ -25,7 +26,7 @@
     "react-html5-camera-photo": "^1.5.2",
     "react-image": "^2.2.1",
     "react-image-file-resizer": "^0.2.1",
-    "react-image-lightbox": "^5.1.0",
+    "react-image-lightbox": "^5.1.1",
     "react-intl": "^3.4.0",
     "react-scripts": "^3.2.0",
     "react-switch": "^5.0.1",
@@ -65,10 +66,10 @@
   ],
   "devDependencies": {
     "@types/classnames": "^2.2.9",
-    "@types/jest": "^24.0.19",
-    "@types/node": "^12.11.7",
-    "@types/react": "^16.9.10",
-    "@types/react-dom": "^16.9.2",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.8",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
     "@types/react-intl": "^3.0.0",
     "@types/react-transition-group": "^4.2.3",
     "@types/reactstrap": "^8.0.6",
@@ -86,7 +87,7 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "http-server": "^0.11.1",
-    "jest-enzyme": "^7.1.1",
+    "jest-enzyme": "^7.1.2",
     "npm-run-all": "^4.1.5",
     "react-test-renderer": "^16.11.0",
     "recursive-readdir": "^2.2.2",
