--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "react-dom": "^16.11.0",
     "react-html5-camera-photo": "^1.5.2",
     "react-image-file-resizer": "^0.2.1",
-    "react-image-lightbox": "github:PauloDevelo/react-image-lightbox#feat/cache-image",
     "react-intl": "^3.4.0",
+    "react-modal": "^3.11.1",
     "react-scripts": "^3.2.0",
     "react-switch": "^5.0.1",
     "react-transition-group": "^4.3.0",
