--- a/package.json
+++ b/package.json
@@ -4,34 +4,33 @@
   "version": "2.11.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@types/localforage": "0.0.34",
     "@types/uuid": "^3.4.6",
     "axios": "^0.19.0",
     "axios-retry": "^3.1.2",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "exif-parser": "^0.1.12",
-    "json-sort-cli": "^1.14.7",
+    "json-sort-cli": "^1.15.4",
     "localforage": "^1.7.3",
     "loglevel": "^1.6.6",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
-    "react": "^16.11.0",
+    "react": "^16.12.0",
     "react-async": "^9.0.0",
-    "react-dom": "^16.11.0",
-    "react-html5-camera-photo": "^1.5.2",
+    "react-dom": "^16.12.0",
     "react-image-file-resizer": "^0.2.1",
-    "react-intl": "^3.4.0",
+    "react-intl": "^3.9.2",
     "react-modal": "^3.11.1",
-    "react-scripts": "^3.2.0",
+    "react-scripts": "3.3.0",
     "react-switch": "^5.0.1",
     "react-transition-group": "^4.3.0",
     "react-uid": "^2.2.0",
-    "reactstrap": "^8.1.1",
+    "reactstrap": "^8.2.0",
     "ssh-deploy-release": "^2.3.4",
     "uuid": "^3.3.3"
   },
@@ -65,31 +64,31 @@
   ],
   "devDependencies": {
     "@types/classnames": "^2.2.9",
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.8",
-    "@types/react": "^16.9.11",
+    "@types/jest": "^24.0.24",
+    "@types/node": "^12.12.21",
+    "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-intl": "^3.0.0",
     "@types/react-transition-group": "^4.2.3",
-    "@types/reactstrap": "^8.0.6",
-    "@typescript-eslint/eslint-plugin": "^2.6.1",
-    "@typescript-eslint/parser": "^2.6.1",
+    "@types/reactstrap": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^2.12.0",
+    "@typescript-eslint/parser": "^2.12.0",
     "chai": "^4.2.0",
     "chai-datetime": "^1.5.0",
     "chalk": "^2.4.2",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "^6.6.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "http-server": "^0.11.1",
+    "http-server": "^0.12.0",
     "jest-enzyme": "^7.1.2",
     "npm-run-all": "^4.1.5",
-    "react-test-renderer": "^16.11.0",
+    "react-test-renderer": "^16.12.0",
     "recursive-readdir": "^2.2.2",
-    "typescript": "^3.6.4"
+    "typescript": "^3.7.4"
   }
 }
