--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-REACT_APP_URL_BASE=https://maintenance.ecogium.fr:8000/api/
+REACT_APP_API_URL_BASE=https://maintenance.ecogium.fr:8000/api/
+REACT_APP_URL=https://maintenance.ecogium.fr/
