--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "http-server": "^0.12.0",
     "jest-enzyme": "^7.1.2",
+    "localforage-memoryStorageDriver": "^0.9.2",
     "npm-run-all": "^4.1.5",
     "react-test-renderer": "^16.12.0",
     "recursive-readdir": "^2.2.2",
