--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@sentry/browser": "^5.13.0",
     "@types/localforage": "0.0.34",
     "@types/react-router-dom": "^5.1.3",
     "@types/uuid": "^3.4.6",
