--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@sentry/browser": "^5.15.4",
-    "@types/localforage": "0.0.34",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/uuid": "^7.0.2",
     "axios": "^0.19.2",
     "axios-retry": "^3.1.2",
     "bootstrap": "^4.4.1",
@@ -18,6 +15,7 @@
     "exif-parser": "^0.1.12",
     "json-sort-cli": "^1.15.10",
     "localforage": "^1.7.3",
+    "lodash": "^4.17.15",
     "loglevel": "^1.6.7",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
@@ -68,12 +66,16 @@
   "devDependencies": {
     "@types/classnames": "^2.2.10",
     "@types/jest": "^25.1.4",
+    "@types/localforage": "0.0.34",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^13.9.5",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "@types/react-intl": "^3.0.0",
+    "@types/react-router-dom": "^5.1.3",
     "@types/react-transition-group": "^4.2.4",
     "@types/reactstrap": "^8.4.2",
+    "@types/uuid": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "chai": "^4.2.0",
