--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 REACT_APP_API_URL_BASE=https://maintenance.ecogium.fr:8000/api/
 REACT_APP_URL=https://maintenance.ecogium.fr/
+REACT_APP_LOG_LEVEL=info
