--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": ".",
   "name": "enginemonitor.reactfront",
-  "version": "2.14.7",
+  "version": "2.14.8",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -13,6 +13,7 @@
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "exif-parser": "^0.1.12",
+    "js-cookie": "^2.2.1",
     "json-sort-cli": "^1.15.10",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
@@ -66,6 +67,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.10",
     "@types/jest": "^25.1.4",
+    "@types/js-cookie": "^2.2.6",
     "@types/localforage": "0.0.34",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.9.5",
