--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "classnames": "^2.2.6",
     "exif-parser": "^0.1.12",
     "js-cookie": "^2.2.1",
-    "json-sort-cli": "^1.18.4",
+    "json-sort-cli": "^1.18.5",
     "localforage": "^1.9.0",
     "lodash": "^4.17.20",
     "loglevel": "^1.7.1",
     "moment": "^2.29.1",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-async": "^10.0.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.1",
     "react-image-file-resizer": "^0.4.1",
     "react-intl": "^5.12.3",
     "react-modal": "^3.12.1",
@@ -70,9 +70,9 @@
     "@types/js-cookie": "^2.2.6",
     "@types/localforage": "0.0.34",
     "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.27",
-    "@types/react": "^16.9.26",
-    "@types/react-dom": "^16.9.5",
+    "@types/node": "^14.14.28",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@types/react-intl": "^3.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-transition-group": "^4.4.0",
@@ -80,11 +80,11 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "chai": "^4.3.0",
     "chai-datetime": "^1.8.0",
     "chalk": "^4.1.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -97,6 +97,6 @@
     "npm-run-all": "^4.1.5",
     "react-test-renderer": "^16.13.1",
     "recursive-readdir": "^2.2.2",
-    "typescript": "^3.8.3"
+    "typescript": "^4.1.5"
   }
 }
