--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "@types/react-transition-group": "^4.4.0",
     "@types/reactstrap": "^8.7.2",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^2.25.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "chai": "^4.3.0",
@@ -87,10 +87,11 @@
     "enzyme": "^3.11.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "http-server": "^0.12.3",
     "jest-enzyme": "^7.1.2",
     "localforage-memoryStorageDriver": "^0.9.2",
