--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/chai": "^4.2.15",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.20",
     "@types/js-cookie": "^2.2.6",
