--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,9 @@
     "rules": {
         "no-use-before-define": "off",
         "@typescript-eslint/no-use-before-define": ["error"],
+        "no-shadow": "off",
+        "@typescript-eslint/no-shadow": ["error"],
+
         "react/jsx-filename-extension": "off",
         "no-underscore-dangle": "off",
         "react/jsx-props-no-spreadin": "off",
